--- a/halal-web/popup.css
+++ b/halal-web/popup.css
@@ -1,20 +1,96 @@
-h1 {
+html {
+  width: auto;
+  height: auto;
+}
+
+p {
+  color: black;
+  font-family: Allan, cursive;
   text-align: center;
 }
 
+#domain {
+  font-size: medium;
+}
+
+#extension-title {
+  font-weight: bold;
+  font-size: large;
+}
+
+.main-buttons {
+  text-align: center;
+}
+
+.website-settings {
+  text-align:center;
+  width: 100%;
+}
 button {
-    height: 30px;
-    width: 100%;
-    border: none;
-    cursor:pointer;
-    margin-bottom: 5px;
+  font-family: Allan, cursive;
+  display: inline-block;
+  outline: none;
+  border-width: 0px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-size: inherit;
+  font-weight: 500;
+  max-width: 100%;
+  text-align: center;
+  text-decoration: none;
+  transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
+  background: rgb(0, 82, 204);
+  cursor: pointer;
+  height: 32px;
+  line-height: 32px;
+  padding: 0px 12px;
+  vertical-align: middle;
+  width: auto;
+  font-size: 14px;
+  color: rgb(255, 255, 255);
   }
 
   button:hover {
-    background-color: aquamarine;
+    background: rgb(0, 101, 255);
+    text-decoration: inherit;
+    transition-duration: 0s, 0.15s;
+    color: rgb(255, 255, 255);
   }
+
+  #whitelist-domain-btn, #whitelist-path-btn, #dangerlist-domain-btn {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    padding: 0 10px;
+    margin: 5px;
+    background-color: #fff;
+    border-radius: 0.25rem;
+    border: 1px solid rgb(0, 82, 204);;
+    color: rgb(0, 82, 204);;
+    font-size: 13px;
+    line-height: 30px;
+    font-weight: 400;
+    text-align: center;
+    width: 150px;
+  }
+
+  #whitelist-domain-btn:hover, #whitelist-path-btn:hover, #dangerlist-domain-btn:hover {
+    background-color: #f4f6f9; 
+}
+#dangerlist-domain-btn {
+  display: none;
+  font-size: xx-small;
+}
+
+.website-settings-btns {
+  width: 100%;
+}
   
-  button.current {
-    box-shadow: 0 0 0 2px white,
-                0 0 0 2px black;
-  }
+#blur-button{
+  margin-bottom: 8px;
+
+}
+
+  /* .media-options{
+    font-size: 10px;
+  } */
