--- a/halal-web/popup.css
+++ b/halal-web/popup.css
@@ -1,4 +1,5 @@
 html {
+  min-width: 200px;
   width: auto;
   height: auto;
 }
@@ -39,7 +40,7 @@ button {
   text-align: center;
   text-decoration: none;
   transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
-  background: rgb(0, 82, 204);
+  background: #0052CC;
   cursor: pointer;
   height: 32px;
   line-height: 32px;
@@ -51,7 +52,7 @@ button {
   }
 
   button:hover {
-    background: rgb(0, 101, 255);
+    background: #0065FF;
     text-decoration: inherit;
     transition-duration: 0s, 0.15s;
     color: rgb(255, 255, 255);
@@ -65,7 +66,7 @@ button {
     margin: 5px;
     background-color: #fff;
     border-radius: 0.25rem;
-    border: 1px solid rgb(0, 82, 204);;
+    border: 1px solid #0052CC;
     color: rgb(0, 82, 204);;
     font-size: 13px;
     line-height: 30px;
@@ -87,10 +88,162 @@ button {
 }
   
 #blur-button{
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 
 }
 
-  /* .media-options{
-    font-size: 10px;
-  } */
+.blur-sliders {
+  text-align: center;
+  margin-bottom: 15px;
+  /* height: 8px; */
+}
+
+.blur-labels {
+  /* margin: 5px 0px; */
+  margin-top: 5px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+#element-blur-amt, #icon-blur-amt {
+  color: black;
+  font-family: Allan, cursive;
+  font-size: xx-small;
+}
+
+input,output {
+  display: inline-block;
+  vertical-align: middle;
+  color: black;
+  font-family: Allan, cursive;
+  font-size: xx-small;
+}
+input[type=range] {
+  height: 22px;
+  -webkit-appearance: none;
+  width: 120px;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 120px;
+  height: 7px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #0052CC;
+  background: #FFFFFF;
+  border-radius: 7px;
+  border: 1px solid #0052CC;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #0052CC;
+  border: 0px solid #0052CC;
+  height: 16px;
+  width: 16px;
+  border-radius: 25px;
+  background: #0052CC;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -5px;
+}
+input[type=range]:active::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 0px solid #0065FF;
+  background: #0065FF;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #FFFFFF;
+}
+
+input[type=range]:active::-webkit-slider-runnable-track {
+  background: #FFFFFF;
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 1px solid #0065FF;
+}
+
+input[type=range]::-moz-range-track {
+  width: 120px;
+  height: 7px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #0052CC;
+  background: #FFFFFF;
+  border-radius: 7px;
+  border: 1px solid #0052CC;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #0052CC;
+  border: 0px solid #0052CC;
+  height: 16px;
+  width: 16px;
+  border-radius: 25px;
+  background: #0052CC;
+  cursor: pointer;
+}
+
+input[type=range]:active::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 0px solid #0065FF;
+  background: #0065FF;
+}
+
+input[type=range]::-ms-track {
+  width: 120px;
+  height: 7px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #FFFFFF;
+  border: 1px solid #0052CC;
+  border-radius: 14px;
+  box-shadow: 0px 0px 0px #0052CC;
+}
+input[type=range]::-ms-fill-upper {
+  background: #FFFFFF;
+  border: 1px solid #0052CC;
+  border-radius: 14px;
+  box-shadow: 0px 0px 0px #0052CC;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #0052CC;
+  border: 0px solid #0052CC;
+  height: 16px;
+  width: 16px;
+  border-radius: 25px;
+  background: #0052CC;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 0px solid #0065FF;
+  background: #0065FF;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #FFFFFF;
+}
+
+input[type=range]:active::-ms-fill-lower {
+  background: #FFFFFF;
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 1px solid #0065FF;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background: #FFFFFF;
+}
+
+input[type=range]:active::-ms-fill-upper {
+  background: #FFFFFF;
+  box-shadow: 0px 0px 0px #0065FF;
+  border: 1px solid #0065FF;
+}
