made all css dynamic

--- a/src/content.css
+++ b/src/content.css
@@ -2,7 +2,7 @@
     filter: blur(0px) !important;
 }
 
-i, span {
+/* i, span {
     font-family:Arial, Helvetica, sans-serif !important;
 }
 
@@ -15,5 +15,5 @@ i, span {
     background-color: #F5F5F5  !important;
     background-image: #F5F5F5 !important;
 }
-
+ */
 
