--- a/src/content.css
+++ b/src/content.css
@@ -2,6 +2,10 @@
     filter: blur(0px) !important;
 }
 
+/* .tooltip {
+    display: none;
+} */
+
 /* i, span {
     font-family:Arial, Helvetica, sans-serif !important;
 }
