--- a/src/popup.css
+++ b/src/popup.css
@@ -4,6 +4,23 @@ html {
   height: auto;
 }
 
+.ui-dialog .ui-dialog-title {
+  text-align: center;
+  width: 100% !important;
+  animation: blinker 1s linear infinite;
+  color: red;
+
+}
+.ui-dialog-titlebar-close {
+  display: none !important;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
 p {
   color: black;
   font-family: Allan, cursive;
